crates/hector-core/tests/snapshots/verdict_snapshot__verdict_block_with_deferred_rules_serializes.snap
---
source: crates/hector-core/tests/verdict_snapshot.rs
expression: v
---
{
  "schema_version": 3,
  "hector_version": "[VERSION]",
  "status": "block",
  "violations": [
    {
      "rule_id": "no-console-log",
      "severity": "error",
      "engine": "script",
      "file": "src/app.ts",
      "line": 42,
      "column": null,
      "message": "console.log not permitted in src/",
      "suggestion": null,
      "context": null
    }
  ],
  "passed_checks": [],
  "elapsed_ms": 12,
  "deferred_rules": [
    {
      "rule_id": "no-todo-comment",
      "severity": "warning",
      "reason": "suppressed by deterministic block"
    }
  ]
}
