crates/hector-core/tests/snapshots/verdict_snapshot__verdict_warn_from_violations.snap
---
source: crates/hector-core/tests/verdict_snapshot.rs
expression: v
---
{
  "schema_version": 1,
  "hector_version": "[VERSION]",
  "status": "warn",
  "violations": [
    {
      "rule_id": "no-debug",
      "severity": "warning",
      "engine": "ast",
      "file": "src/lib.ts",
      "line": null,
      "column": null,
      "message": "debugger statement left in code",
      "suggestion": "remove debugger",
      "context": null
    }
  ],
  "passed_checks": [],
  "elapsed_ms": 55
}
